--- a/Public/color-game.html
+++ b/Public/color-game.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="../assets/css/color-game.css">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Color game</title>
 </head>
@@ -27,6 +27,6 @@
 	<div id="e" class="on" onclick="checke()"></div>
 	<div id="f" class="on" onclick="checkf()"></div>
 </div>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="../assets/Js/Color-game.js"></script>
 </body>
 </html>
